--- a/module_2_data_wrangling/case_studies/Case Study - New York Annual Property Sale Record.ipynb
+++ b/module_2_data_wrangling/case_studies/Case Study - New York Annual Property Sale Record.ipynb
@@ -1448,7 +1448,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 22593 entries, 2 to 26375\n",
-      "Data columns (total 11 columns):\n",
+      "Data columns (total 9 columns):\n",
       " #   Column                          Non-Null Count  Dtype         \n",
       "---  ------                          --------------  -----         \n",
       " 0   neighborhood                    22593 non-null  object        \n",
@@ -1460,21 +1460,26 @@
       " 6   year_built                      22593 non-null  datetime64[ns]\n",
       " 7   sale_price                      22593 non-null  float64       \n",
       " 8   sale_date                       22593 non-null  datetime64[ns]\n",
-      " 9   building_class_1                22593 non-null  object        \n",
-      " 10  building_class_2                22593 non-null  object        \n",
-      "dtypes: category(3), datetime64[ns](2), float64(1), int64(1), object(4)\n",
-      "memory usage: 2.1+ MB\n"
+      "dtypes: category(3), datetime64[ns](2), float64(1), int64(1), object(2)\n",
+      "memory usage: 1.7+ MB\n"
      ]
     }
    ],
    "source": [
+    "# Filter rows based on building class.\n",
     "data = data[data.building_class_1.isin([\"A\", \"B\", \"C\", \"D\", \"R\"])]\n",
     "data[data.building_class_1 == \"R\"].groupby(\"building_class_2\").count()\n",
     "valid_class_2 = list(map(str, range(1,10)))\n",
     "data = data[(data.building_class_1!=\"R\") | data.building_class_2.isin(valid_class_2)]\n",
+    "\n",
+    "# Filter rows on other criteria.\n",
     "data = data[data.residential_units == 1]\n",
     "data = data[data.sale_price > 0]\n",
     "data = data[data.tax_class_at_time_of_sale.isin([1, 2])]\n",
+    "\n",
+    "# Drop columns that are no longer needed.\n",
+    "data = data.drop(columns=[\"building_class_1\", \"building_class_2\"])\n",
+    "\n",
     "data.info()"
    ]
   },
@@ -1528,8 +1533,6 @@
        "      <th>year_built</th>\n",
        "      <th>sale_price</th>\n",
        "      <th>sale_date</th>\n",
-       "      <th>building_class_1</th>\n",
-       "      <th>building_class_2</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1544,8 +1547,6 @@
        "      <td>1945-01-01</td>\n",
        "      <td>935000.0</td>\n",
        "      <td>2021-12-08</td>\n",
-       "      <td>A</td>\n",
-       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1558,8 +1559,6 @@
        "      <td>1950-01-01</td>\n",
        "      <td>800000.0</td>\n",
        "      <td>2021-01-11</td>\n",
-       "      <td>A</td>\n",
-       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1572,8 +1571,6 @@
        "      <td>1950-01-01</td>\n",
        "      <td>815000.0</td>\n",
        "      <td>2021-06-25</td>\n",
-       "      <td>A</td>\n",
-       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -1586,8 +1583,6 @@
        "      <td>1950-01-01</td>\n",
        "      <td>950000.0</td>\n",
        "      <td>2021-08-17</td>\n",
-       "      <td>A</td>\n",
-       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -1600,8 +1595,6 @@
        "      <td>1920-01-01</td>\n",
        "      <td>397000.0</td>\n",
        "      <td>2021-07-09</td>\n",
-       "      <td>A</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1622,12 +1615,12 @@
        "6                   1                       1.0 1950-01-01    950000.0   \n",
        "11                  1                       1.0 1920-01-01    397000.0   \n",
        "\n",
-       "    sale_date building_class_1 building_class_2  \n",
-       "2  2021-12-08                A                5  \n",
-       "3  2021-01-11                A                5  \n",
-       "5  2021-06-25                A                5  \n",
-       "6  2021-08-17                A                5  \n",
-       "11 2021-07-09                A                2  "
+       "    sale_date  \n",
+       "2  2021-12-08  \n",
+       "3  2021-01-11  \n",
+       "5  2021-06-25  \n",
+       "6  2021-08-17  \n",
+       "11 2021-07-09  "
       ]
      },
      "execution_count": 19,
@@ -2001,7 +1994,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_excel(\"queens_residential_property_sale_record.xlsx\")"
+    "data.to_csv(\"queens_residential_property_sale_record.csv\", index=False, date_format=\"%Y-%m-%dT00:00:00\")"
    ]
   },
   {
