Update case studies.

--- a/module_2_data_wrangling/case_studies/Case Study - Yellow Taxi.ipynb
+++ b/module_2_data_wrangling/case_studies/Case Study - Yellow Taxi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "16a9a023",
+   "id": "0e4e86b3",
    "metadata": {},
    "source": [
     "# Case Study: Yellow Taxi\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7efd1cdc",
+   "id": "54df883f",
    "metadata": {},
    "source": [
     "In the code above, we have downloaded 12 datasets into a list and used `pd.concat` to combine them into a single dataset that contains almost 40 million rows. Let's take a closer look."
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78fbb62c",
+   "id": "3d175a7c",
    "metadata": {},
    "source": [
     "You can find out more about the meaning of each column from the [yellow trip data dictionary](https://www.nyc.gov/assets/tlc/downloads/pdf/data_dictionary_trip_records_yellow.pdf). Overall, the dataset seems to be tidy. Each row represents an observation, i.e. a single trip. Each column corresponds to some attribute of the observation. Each cell records the measurement of the attribute for the given observation.\n",
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d5b814c",
+   "id": "3bc97320",
    "metadata": {},
    "source": [
     "## Remove rows with missing data\n",
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "961109fe",
+   "id": "4c9b778b",
    "metadata": {},
    "source": [
     "## Filter out invalid rows\n",
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f604ec53",
+   "id": "1877ff13",
    "metadata": {},
    "source": [
     "If you look closely at the above statistics, you will be able to see some values that does not make sense. For example, the `min` of `passenger_count` is 0.  That means some trips are recorded without a passenger! Furthermore, the `min` of `fare_amount` and `total_amount` are negative. I.e. someone earned some money by taking a taxi trip?! These observations are clearly invalid and should be removed."
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5dfb879",
+   "id": "e5cb8732",
    "metadata": {},
    "source": [
     "## Specify column types\n",
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cfd611b",
+   "id": "2f4ff3f4",
    "metadata": {},
    "source": [
     "## Saving the data\n",
@@ -1237,17 +1237,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "6399a625",
+   "execution_count": 9,
+   "id": "5dd0eddc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv(\"yellow_taxi_2022.csv\", index=False)"
+    "data.to_parquet(\"yellow_taxi_2022.parquet\", index=False)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c31ebec1",
+   "id": "a5597678",
    "metadata": {},
    "source": [
     "## Summary\n",
@@ -1266,7 +1266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea30c6ed",
+   "id": "035c2198",
    "metadata": {},
    "outputs": [],
    "source": []
